--- a/pages/drugInfo/index.axml
+++ b/pages/drugInfo/index.axml
@@ -1,4 +1,11 @@
 <view class="drug">
+<view class="custom-nav" style="height:{{titleBarHeight + statusBarHeight}}px">
+  <view class="custom-titleBar" 
+        style="height:{{titleBarHeight}}px;padding-top:{{statusBarHeight}}px;"
+        onTap="onTitleBar" >
+    <text style="font-size:18px;">扫码放心·药品追溯</text>
+  </view>
+</view>
     <view class="drugInfo">
       <collapse
             className="demo-collapse"
